--- a/ClientAstree/Views/Shared/_SideMenu.cshtml
+++ b/ClientAstree/Views/Shared/_SideMenu.cshtml
@@ -35,7 +35,7 @@
          @if(claim.Value=="Member"){
                 
         <li class=""><a class="nav-link" asp-controller="User" asp-action="Dashboard"><p>Dashboard</p></a></li>
-        <li class=""><a class="nav-link" asp-controller="User" asp-action="UserContract"><p>My Contracts</p></a></li>
+        <li class=""><a class="nav-link" asp-controller="User" asp-action="MyContract"><p>My Contracts</p></a></li>
         <li class=""><a class="nav-link " href="#"><p>My Contracts</p></a></li>
         <li class=""><a class="nav-link " href="#"><p>Quotes</p></a></li>
         <li class=""><a class="nav-link " href="#"><p>Simulators</p></a></li>
